[gd_scene load_steps=2 format=3 uid="uid://bjvt1tywkjr1"]

[ext_resource type="Script" uid="uid://dxeen7d7itjk7" path="res://scripts/JokerCard.gd" id="1_1pto4"]

[node name="JokerCard" type="Control"]
custom_minimum_size = Vector2(205, 310)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -154.0
offset_right = 102.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1pto4")

[node name="CardShadow" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.2, 0.6, 0.5)

[node name="CardBackground" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardBG" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.08, 0.2, 1)

[node name="CardBorder" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.84, 0, 1)

[node name="CardInner" type="ColorRect" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.15, 0.3, 1)

[node name="CardGlow" type="ColorRect" parent="CardBackground"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.84, 0, 0.4)

[node name="VBox" type="VBoxContainer" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="CardBackground/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="CardBackground/VBox/HeaderContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1.5, 1.3, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 13
text = "Joker Card"
vertical_alignment = 1
autowrap_mode = 2

[node name="CostContainer" type="Panel" parent="CardBackground/VBox/HeaderContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="CostBG" type="ColorRect" parent="CardBackground/VBox/HeaderContainer/CostContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.6, 0.2, 1)

[node name="CostBorder" type="ColorRect" parent="CardBackground/VBox/HeaderContainer/CostContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.84, 0.4, 1)

[node name="CostLabel" type="Label" parent="CardBackground/VBox/HeaderContainer/CostContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1.5, 1.3, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="JokerContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 0

[node name="JokerBG" type="ColorRect" parent="CardBackground/VBox/JokerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.3, 0.8, 1)

[node name="JokerBorder" type="ColorRect" parent="CardBackground/VBox/JokerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7, 0.4, 0.9, 1)

[node name="JokerLabel" type="Label" parent="CardBackground/VBox/JokerContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1.3, 1, 1.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 13
text = "[CORINGAS]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="ArtContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ArtBG" type="ColorRect" parent="CardBackground/VBox/ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.25, 0.45, 1)

[node name="ArtBorder" type="ColorRect" parent="CardBackground/VBox/ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.35, 0.55, 1)

[node name="CardIcon" type="VideoStreamPlayer" parent="CardBackground/VBox/ArtContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autoplay = true
expand = true
loop = true

[node name="HSeparator2" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="CardBackground/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatValue" type="Label" parent="CardBackground/VBox/StatsContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1.5, 1.2, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "â˜…"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="DescriptionContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="DescBG" type="ColorRect" parent="CardBackground/VBox/DescriptionContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.04, 0.12, 0.9)

[node name="DescBorder" type="ColorRect" parent="CardBackground/VBox/DescriptionContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.08, 0.16, 0.9)

[node name="DescriptionLabel" type="Label" parent="CardBackground/VBox/DescriptionContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "Joker effect"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="CardBackground/VBox"]
layout_mode = 2

[node name="RarityContainer" type="Panel" parent="CardBackground/VBox"]
clip_contents = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_vertical = 0

[node name="RarityBG" type="ColorRect" parent="CardBackground/VBox/RarityContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.3, 0.6, 0.8)

[node name="RarityBorder" type="ColorRect" parent="CardBackground/VBox/RarityContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.4, 0.7, 0.8)

[node name="RarityLabel" type="Label" parent="CardBackground/VBox/RarityContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1.2, 1, 1.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "[Special]"
horizontal_alignment = 1
vertical_alignment = 1
